$Id$

2017-10-29  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Update links.
	Remove outdated uninstall commands.

	INSTALL: Update ./configure description and OS info.

	ataidentify.cpp, ataprint.cpp: Minor ACS-4 additions.

	ataprint.cpp, ataprint.h, smartctl.cpp: Add option '-l defects'
	to print ATA ACS-4 Pending Defects log (ticket #909).
	smartctl.8.in: Document '-l defects'.

2017-10-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung based SSDs: PM871b (tickets #895, #903)
	- Seagate Enterprise Capacity 3.5 HDD: 4TB (fix for #913)
	- Western Digital Red Pro: 6TB (ticket #785)

	os_win32/smartd_warning.cmd: Add ability to run PowerShell scripts
	with '-M exec'.
	smartd.conf.5.in: Document new functionality.  Fix typo.

2017-10-25  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - add SATA Voyager GTX (#893)

2017-10-24  Christian Franke  <franke@computer.org>

	do_release: Update code signing key id.

	update-smart-drivedb.in: Add new mailing list address to database
	signing key.

2017-10-24  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - add USB Voyager GTX (#893)
	 - add Phison based OEM SSD based on the firmware name (#853, #831)
	 - add Ultrastar 7K2 series (#892)
	 - add LITEON ZETA (LMH-*V2M-*) (#794)

2017-10-22  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1709 build number.

	configure.ac: Fail instead of warn if no compiler option to accept
	C++11 found and '--with-cxx11-option' is not specified.

2017-10-19  Alex Samorukov <samm@os2.kiev.ua>

	scsicmds.h: increase SCSI_TIMEOUT_DEFAULT to 1 minute to work on the
	big JBOD arrays (#917)

2017-10-15  Christian Franke  <franke@computer.org>

	smartd.cpp: Use also device identify information to detect for
	duplicate devices (ticket #313).

	atacmds.cpp: Don't pass possibly unaligned pointers to swapx().
	This silences '-Waddress-of-packed-member' warning from clang++ 4.0
	(ticket #915).
