@@ -419,13 +419,12 @@ this option are:
 .I scsiioctl
 \- report only ioctl() transactions with SCSI devices.
 .Sp
-.\" %IF OS FreeBSD Linux NetBSD Windows Cygwin
+.\" %IF OS Darwin FreeBSD Linux NetBSD Windows Cygwin
 .I nvmeioctl
-\- [FreeBSD, Linux, NetBSD, Windows and Cygwin only]
-[NEW EXPERIMENTAL SMARTD FEATURE]
+\- [NEW EXPERIMENTAL SMARTD FEATURE]
 report only ioctl() transactions with NVMe devices.
 .Sp
-.\" %ENDIF OS FreeBSD Linux NetBSD Windows Cygwin
+.\" %ENDIF OS Darwin FreeBSD Linux NetBSD Windows Cygwin
 Any argument may include a positive integer to specify the level of
 detail that should be reported.  The argument should be followed by a
 comma then the integer with no spaces.  For example, \fIataioctl,2\fP
